--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
   "devDependencies": {
     "tailwindcss": "^3.3.3"
   },
-  "homepage": "https://mandoo98.github.io/ReactYoutube/"
+  "homepage": "https://react2-youtube.netlify.app/"
 }
